# leaklens

./: README.md  example_report.html  pyproject.toml
.github/workflows/: leaklens-qa.yml
examples/: example_usage.py
leaklens/: __init__.py  cli.py  config.py  core.py  exceptions.py  report.py  utils.py
leaklens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
leaklens/analyzers/: base.py  contamination.py  drift.py  duplicate_columns.py  missing_value_leakage.py  preprocessing.py  schema.py  target_leakage.py  temporal.py
leaklens/models/: issue.py  report.py
leaklens/templates/: report.html
leaklens/visualizations/: contamination.py  drift.py
tests/: test_contamination.py  test_core.py  test_drift.py  test_duplicate_columns.py  test_missing_value_leakage.py  test_preprocessing.py  test_preprocessing_expanded.py  test_schema.py  test_target_leakage.py  test_temporal.py
